--- a/app/editor.html
+++ b/app/editor.html
@@ -197,7 +197,21 @@
 		}
 
 		function setGrid() {
-			leveldata = baseleveldata;
+			leveldata = {
+				grid: [width, height],
+				tiles: [
+
+				],
+				blocks: [
+
+				],
+				plates: [
+
+				],
+				data: {
+
+				}
+			};
 			for (var x = 0; x < grid.length; x++) {
 				for (var y = 0; y < grid[x].length; y++) {
 					for (var z = 0; z < grid[x][y].length; z++) {
