--- a/app/editor.html
+++ b/app/editor.html
@@ -135,229 +135,5 @@
 	</body>
 	<script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-	<script>
-		const fs = require("fs");
-		var width = 15;
-		var height = 9;
-		var grid = []
-		var leveldata = {
-			grid: [width, height],
-			tiles: [
-
-			],
-			blocks: [
-
-			],
-			plates: [
-
-			],
-			data: {
-
-			}
-		}
-		var baseleveldata = {
-			grid: [width, height],
-			tiles: [
-
-			],
-			blocks: [
-
-			],
-			plates: [
-
-			],
-			data: {
-
-			}
-		}
-
-		var select = "blank";
-
-		var place = {
-			"tile": function(pos) {
-				$(`.cell.x-${pos.x}.y-${pos.y}`).append(`<div class="tile ob-x-${pos.x} ob-y-${pos.y}"></div>`);
-			},
-			"block": function(pos) {
-				$("#game").append(`<span class="block-group ob-x-${pos.x} ob-y-${pos.y}" style="left: ${pos.x * 50}px; top: ${(pos.y * 50)+"px"}; position: absolute;" data-id='{"x": ${pos.x}, "y": ${pos.y}}'><a href="#" class="btn btn-info disabled block" data-id='{"x": ${pos.x}, "y": ${pos.y}}'></a></span>`)
-			},
-			"plate": function(pos) {
-				$("#game").append(`<a href="#" class="btn btn-warning disabled plate ob-x-${pos.x} ob-y-${pos.y}" style="left: ${pos.x * 50}px; top: ${(pos.y * 50)+"px"}; position: absolute;"></a>`);
-			}
-		}
-
-		for (var x = 0; x < width; x++) {
-			grid.push([]);
-			for (var y = 0; y < height; y++) {
-				grid[x].push([]);
-			}
-		}
-
-		function remove(pos) {
-			$(`.ob-x-${pos.x}.ob-y-${pos.y}`).remove();
-		}
-
-		function setGrid() {
-			leveldata = {
-				grid: [width, height],
-				tiles: [
-
-				],
-				blocks: [
-
-				],
-				plates: [
-
-				],
-				data: {
-
-				}
-			};
-			for (var x = 0; x < grid.length; x++) {
-				for (var y = 0; y < grid[x].length; y++) {
-					for (var z = 0; z < grid[x][y].length; z++) {
-						item = grid[x][y][z];
-						if (item == "tile") {
-							leveldata.tiles.push([x, y]);
-						}
-						if (item == "block") {
-							leveldata.blocks.push([x, y]);
-						}
-						if (item == "plate") {
-							leveldata.plates.push([x, y]);
-						}
-					}
-				}
-			}
-		}
-
-		for (var j = 0; j < height; j++) {
-			$("#table>tbody").append(`<tr id="row-${j}"></tr>`);
-			for (var i = 0; i < width; i++) {
-				$(`#row-${j}`).append(`<td class="cell x-${i} y-${j}" data-id='{"x": ${i}, "y": ${j}}'></td>`);
-			}
-		}
-
-		var _GET = {}
-		for (var g = 0; g < location.search.slice(1).split('&').length; g++) {
-			_GET[location.search.slice(1).split('&')[g].split("=")[0]] = location.search.slice(1).split('&')[g].split("=")[1]
-		}
-
-		if (location.search.split("?")[1].split("&")[0].split('=')[1] == '1') {
-			leveldata = JSON.parse(fs.readFileSync(`${__dirname}/data/levels/temp.json`, "utf8").replace(/(?:\r\n|\r|\n)/g, "").replace("  ", ""));
-			leveldata.tiles.forEach(function(item, index) {
-				grid[item[0]][item[1]].push("tile");
-				place["tile"]({x: item[0], y: [item[1]]});
-			});
-			leveldata.plates.forEach(function(item, index) {
-				grid[item[0]][item[1]].push("plate");
-				place["plate"]({x: item[0], y: [item[1]]});
-			});
-			leveldata.blocks.forEach(function(item, index) {
-				grid[item[0]][item[1]].push("block");
-				place["block"]({x: item[0], y: [item[1]]});
-			});
-		} else if (_GET["play"] == '2') {
-			name = _GET["name"]
-			leveldata = JSON.parse(fs.readFileSync(`${__dirname}/data/levels/user/${name}`, "utf8").replace(/(?:\r\n|\r|\n)/g, "").replace("  ", ""));
-			leveldata.tiles.forEach(function(item, index) {
-				grid[item[0]][item[1]].push("tile");
-				place["tile"]({x: item[0], y: [item[1]]});
-			});
-			leveldata.plates.forEach(function(item, index) {
-				grid[item[0]][item[1]].push("plate");
-				place["plate"]({x: item[0], y: [item[1]]});
-			});
-			leveldata.blocks.forEach(function(item, index) {
-				grid[item[0]][item[1]].push("block");
-				place["block"]({x: item[0], y: [item[1]]});
-			});
-		}
-
-		$("#table").on("click", ".cell", function() {
-			var pos = $(this).data("id");
-			if (select != "blank") {
-				if (!grid[pos.x][pos.y].includes(select)) {
-					if (select != "tile" && !grid[pos.x][pos.y].includes("tile")) {
-						grid[pos.x][pos.y].push("tile");
-						place["tile"](pos);
-					}
-					grid[pos.x][pos.y].push(select);
-					place[select](pos);
-				}
-			} else {
-				grid[pos.x][pos.y] = []
-				remove(pos);
-			}
-		});
-
-		$("#table").on("contextmenu", ".cell", function() {
-			var pos = $(this).data("id");
-			type = grid[pos.x][pos.y].pop();
-			if (type != undefined) {
-				type += (type == "block")?"-group":"";
-				$(`.${type}.ob-x-${pos.x}.ob-y-${pos.y}`).remove();
-			}
-		});
-
-		$(".select").on("click", function() {
-			$(`.select-${select}`).removeClass("selected");
-			select = $(this).data("id");
-			$(`.select-${select}`).addClass("selected");
-			$("#selector").animate({left: $(this).parent().position().left, width: $(this).parent().width() + 6}, 200);
-		})
-
-		$("#menu").on("mouseenter", function() {
-			setTimeout(function() {$("#arrow").html("«")}, 100)
-			$(this).animate({left:0}, 200);
-		});
-
-		$("#menu").on("mouseleave", function() {
-			setTimeout(function() {$("#arrow").html("»")}, 100)
-			$(this).animate({left:-353}, 200);
-		});
-
-		$("#openButton").on("click", function() {
-			files = fs.readdirSync(`${__dirname}/data/levels/user`);
-			$("#selectBox").empty();
-			for (var i = 0; i < files.length; i++) {
-				$("#selectBox").append(`<option>${files[i]}</option>`)
-			}
-		});
-
-		$("#open").on("click", function() {
-			if ($("select").val().length > 0) {
-				name = $("select").val();
-				location = location.pathname + "?play=2&name="+name;
-			}
-		});
-
-		$("#play").on("click", function() {
-			setGrid();
-			fs.writeFileSync(`${__dirname}/data/levels/temp.json`, JSON.stringify(leveldata), "utf8");
-			location = "play.html?leveldata=temp&custom=2";
-		})
-
-		$("#save").on("click", function() {
-			setGrid();
-			if ($("#name").val() != "") {
-				name = $("#name").val();
-				fs.writeFileSync(`${__dirname}/data/levels/user/${name}.json`, JSON.stringify(leveldata), "utf8");
-			}
-			$("#saveModal").modal("toggle");
-		});
-
-		$(document).on("keydown", function(event) {
-			if (event.key == "1") {
-				$(`.select-${"blank"}`).trigger("click");
-			} else if (event.key == "2") {
-				$(`.select-${"tile"}`).trigger("click");
-			} else if (event.key == "3") {
-				$(`.select-${"block"}`).trigger("click");
-			} else if (event.key == "4") {
-				$(`.select-${"plate"}`).trigger("click");
-			} else if (event.key == "p") {
-				$("#play").trigger("click");
-			}
-		});
-	</script>
+	<script src="js/editor1.js"></script>
 </html>
