Implemented the 'Continue' button upon level complete

--- a/app/play.html
+++ b/app/play.html
@@ -113,6 +113,7 @@
 						<p>TODO</p>
 					</div>
 					<div class="modal-footer">
+						<button type="button" class="btn btn-default" id="levelSelect">Level Select</button>
 						<button href="menu.html" type="button" class="btn btn-primary" data-dismiss="modal" id="continue">Continue</button>
 					</div>
 				</div>
