--- a/app/menu.html
+++ b/app/menu.html
@@ -20,7 +20,6 @@
 				<a href="editor.html?play=0" id="editor" class="btn btn-default btn-lg btn-block">Level Editor</a><br>
 				<a href="#" id="about" class="btn btn-default btn-lg btn-block modal-button" data-toggle="modal" data-target="#aboutModel">About</a><br>
 				<a href="#" id="quit" class="btn btn-default btn-lg btn-block">Quit</a>
-				<a href="testing.html">test</a>
 			</div>
 		</div>
 		<span class="label label-default" style="position: absolute; left: 2px; bottom: 2px;">Cooper Anderson</span>
@@ -63,6 +62,12 @@
 			$("#version").addClass("label-primary");
 		}
 		$("#version").html(data.release + " " + data.version)
+
+		$(document).on("keydown", function(event) {
+			if (event.key == '|') {
+				location = "testing.html";
+			}
+		});
 		////////
 	</script>
 </html>
