--- a/app/testing.html
+++ b/app/testing.html
@@ -7,7 +7,7 @@
 		<script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
 	</head>
 	<body>
-
+		<a href="menu.html">Back</a>
 	</body>
 	<link rel="stylesheet" href="css/bootstrap.css" title="dark">
 	<script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
