Changed 'Turns: ' to 'Moves: ' in the play screen. Closes #12

--- a/app/play.html
+++ b/app/play.html
@@ -76,7 +76,7 @@
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2" style="padding-left: 24px;">
 					<ul class="nav navbar-nav">
 						<li><a href="#" id="panel-arrow" style="padding-left: 0px;">»</a></li>
-						<li><a>Turns: <span id="turns">0</span></a></li>
+						<li><a>Moves: <span id="moves">0</span></a></li>
 						<li><a>Time: <span id="time">5</span>s</a></li>
 					</ul>
 				</div>
