Introduced the level number / level name visibility in play mode, subject to change later. Closes #4

--- a/app/play.html
+++ b/app/play.html
@@ -82,6 +82,14 @@
 				</div>
 			</div>
 		</nav>
+		<div style="position: absolute; left: 4px; bottom: 4px;">
+			<span>
+				<span>Level: <span id="levelNumber">0</span></span><br>
+				<span>Name: <span id="levelName">Debug</span></span><br>
+				<span>Creators: <span id="levelCreators">Cooper Anderson</span></span>
+			</span>
+			<!--span>Level: <span id="levelnumber">0</span>: <span id="levelname">Debug</span></span-->
+		</div>
 		<div class="container" id="game" align="center" style="display: inline-block; margin: 0px; padding: 0px;">
 			<table id="table" style="margin: 0px;">
 			</table>
