Indev v0.1.49: Disabled the "Disabled Cursor" when hovering over a button in a direction that the block cannot move in.

--- a/app/play.html
+++ b/app/play.html
@@ -55,6 +55,9 @@
 				height: 24px;
 				position: absolute;
 			}
+			.directional-button.disabled {
+				cursor: default;
+			}
 		</style>
 	</head>
 	<body style="font-family: Hasklig;">
