Indev v0.2.0: Completely reorganized the way the directories are sorted. Closes #6

--- a/app/source/scripts/levelselect.html
+++ b/app/source/scripts/levelselect.html
@@ -62,7 +62,7 @@
 		var width = 4;
 		var height = 4;
 		var level;
-		progress = JSON.parse(fs.readFileSync(`${__dirname}/data/progress.json`, "utf8").replace(/(?:\r\n|\r|\n)/g, "").replace("   ","").replace("  ",""))
+		progress = JSON.parse(fs.readFileSync(`${__dirname}/../../save-data/progress.json`, "utf8").replace(/(?:\r\n|\r|\n)/g, "").replace("   ","").replace("  ",""))
 		function load() {
 			page = Number($("#table").data("id"));
 			$("#title").html(`Page ${page}`);
@@ -70,10 +70,10 @@
 				$("#table").append(`<tr id="row-${y + 1}"></tr>`);
 				for (var x = 0; x < width; x++) {
 					level = ((y) * height + x + 1) + (width * height * (page - 1));
-					path = `${__dirname}/data/levels/level${level}.json`;
-					json = (fs.existsSync(`${__dirname}/data/levels/level${String(level)}.json`))?fs.readFileSync(`${__dirname}/data/levels/level${String(level)}.json`, "utf8").replace(/(?:\r\n|\r|\n)/g, "").replace("   ","").replace("  ",""):"{}";
-					color = (progress.completed.includes(`level${level}`))?"success":"primary";
-					color = (progress.unlocked.includes(`level${level}`))?color:"default";
+					var pathToFile = `${__dirname}/../resources/default-levels/level${level}.json`;
+					var json = (fs.existsSync(pathToFile))?fs.readFileSync(pathToFile, "utf8").replace(/(?:\r\n|\r|\n)/g, "").replace("   ","").replace("  ",""):"{}";
+					var color = (progress.completed.includes(`level${level}`))?"success":"primary";
+					var color = (progress.unlocked.includes(`level${level}`))?color:"default";
 					$("#row-" + (y + 1)).append(`<td class="row-${y + 1} col-${x + 1}"></td>`);
 					$(`.row-${y + 1}.col-${x + 1}`).append(`<a href="#" id="${level}" class="btn btn-${color} btn-lg btn-block level-button" stye="width: 65px;">${level}</a>`)//play.html?leveldata=${path}
 				}
@@ -102,9 +102,9 @@
 		$("#table").on("click", ".level-button", function() {
 			if (level != $(this).attr("id")) {
 				level = $(this).attr("id");
-				path = `${__dirname}/data/levels/level${level}.json`;
+				var pathToFile = `${__dirname}/../resources/default-levels/level${level}.json`;
 				$(".local.level").html(level);
-				if (fs.existsSync(path)) {
+				if (fs.existsSync(pathToFile)) {
 					$("#play-button").removeAttr("disabled").data("id", level);
 				} else {
 					$("#play-button").attr("disabled", "disabled").data("id", 0);
