--- a/app/source/scripts/levelselect.html
+++ b/app/source/scripts/levelselect.html
@@ -18,7 +18,7 @@
 		<div class="container" align="center">
 			<br><br><br>
 			<a href="#" id="leftArrow" data-id="0" class="btn btn-info move"><-</a>
-			<a href="#" id="title" class="btn btn-info" style="width: 290px; background-color: #3498db; border-color: #3498db; cursor: default; opacity: 1.0;" disabled>Page </a>
+			<a href="#" id="title" class="btn btn-info" style="width: 290px; cursor: default; opacity: 1.0;" disabled>Page </a>
 			<a href="#" id="rightArrow" data-id="1" class="btn btn-info move">-></a>
 			<br><br>
 			<div class="panel panel-primary" style="position: absolute; left: 8px; right: 558px; top: 134px; height: 290px;">
