--- a/app/source/scripts/play.html
+++ b/app/source/scripts/play.html
@@ -100,7 +100,8 @@
 						<h4 class="modal-title">Help</h4>
 					</div>
 					<div class="modal-body">
-						<p>TODO</p>
+						<p>Not sure what to do? Try hovering your mouse over one of the colored blocks.</p>
+						<p>If you're stuck, go back and play some of the earlier levels. There might be something you forgot along the way that might be helpful.</p>
 					</div>
 					<div class="modal-footer">
 						<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -116,7 +117,7 @@
 						<h4 class="modal-title">Level Complete!</h4>
 					</div>
 					<div class="modal-body">
-						<p>TODO</p>
+						<p>Congratulations!</p>
 					</div>
 					<div class="modal-footer">
 						<button type="button" class="btn btn-default" id="levelSelect">Level Select</button>
