--- a/app/source/scripts/menu.html
+++ b/app/source/scripts/menu.html
@@ -35,7 +35,22 @@
 						<h4 class="modal-title">About</h4>
 					</div>
 					<div class="modal-body">
-						<p>TODO</p>
+						<p>Blockade is a minimal grid-based puzzle game that is inspired by the ice puzzles in The Legend of Zelda: Twilight Princess.</p>
+						<p>Programming:</p>
+						<ul>
+							<li>Cooper Anderson</li>
+						</ul>
+						<p>Level Design:</p>
+						<ul>
+							<li>Grady Shoemaker</li>
+							<li>Cooper Anderson</li>
+							<li>Jack Warner</li>
+						</ul>
+						<p>Special Thanks:</p>
+						<ul>
+							<li>Antony Suarez</li>
+							<li>Fernando Morales</li>
+						</ul>
 					</div>
 					<div class="modal-footer">
 						<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
