--- a/app/source/scripts/menu.html
+++ b/app/source/scripts/menu.html
@@ -25,7 +25,7 @@
 				<a href="#" id="quit" class="btn btn-default btn-lg btn-block">Quit</a>
 			</div>
 		</div>
-		<span class="label label-default" style="position: absolute; left: 2px; bottom: 2px;">Cooper Anderson</span>
+		<span class="label label-default" style="position: absolute; left: 2px; bottom: 2px;"><span style="font-family: Damascus">©</span> Cooper Anderson 2016</span>
 		<span id="version" class="label" style="position: absolute; right: 2px; bottom: 2px;"></span>
 		<div id="aboutModel" class="modal fade" role="dialog">
 			<div class="modal-dialog">
