--- a/app/source/scripts/editor.html
+++ b/app/source/scripts/editor.html
@@ -124,7 +124,8 @@
 						<h4 class="modal-title">Help</h4>
 					</div>
 					<div class="modal-body">
-						<p>TODO</p>
+						<p>Use the bar at the bottom of the screen to select an object, and click anywhere on the board to place it.</p>
+						<p>You can also try right clicking to delete objects, or using the number keys to switch between selected items.</p>
 					</div>
 					<div class="modal-footer">
 						<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
