--- a/app/source/scripts/menu.html
+++ b/app/source/scripts/menu.html
@@ -20,12 +20,12 @@
 			<h1 style="font-family: Hasklig; font-size: 80px;">「Blockade」</h1><br><br>
 			<div style="width: 300px">
 				<a href="levelselect.html" id="play" class="btn btn-default btn-lg btn-block">Play</a><br>
-				<a href="editor.html?play=0" id="editor" class="btn btn-default btn-lg btn-block">Level Editor</a><br>
+				<a href="editor.html?play=0" id="editor" class="btn btn-default btn-lg btn-block">Editor</a><br>
 				<a href="#" id="about" class="btn btn-default btn-lg btn-block modal-button" data-toggle="modal" data-target="#aboutModel">About</a><br>
 				<a href="#" id="quit" class="btn btn-default btn-lg btn-block">Quit</a>
 			</div>
 		</div>
-		<span class="label label-default" style="position: absolute; left: 2px; bottom: 2px;"><span style="font-family: Damascus">©</span> Cooper Anderson 2016</span>
+		<span class="label label-default" style="position: absolute; left: 2px; bottom: 2px;"><span style="font-family: Verdana">©</span> Cooper Anderson 2016</span>
 		<span id="version" class="label" style="position: absolute; right: 2px; bottom: 2px;"></span>
 		<div id="aboutModel" class="modal fade" role="dialog">
 			<div class="modal-dialog">
