--- a/app/source/scripts/playNew.html
+++ b/app/source/scripts/playNew.html
@@ -15,7 +15,7 @@
 					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 						<ul class="nav navbar-nav">
 							<li><a href="levelselect.html">Level Select</a></li>
-							<li><a href="#" id="restart">Restart</a></li>
+							<li><a id="restart">Restart</a></li>
 							<li><a href="menu.html" id="exit">Exit</a></li>
 							<li><a id="menuArrow" style="padding-right: 8px;">»</a></li>
 						</ul>
