--- a/app/source/scripts/playNew.html
+++ b/app/source/scripts/playNew.html
@@ -32,6 +32,9 @@
 					</div>
 				</div>
 			</div>
+			<div style="position: absolute; left: 4px; bottom: 27px;">
+				<span class="label label-info" id="levelNumber"></span> <span id="levelName"></span>
+			</div>
 		</span>
 		<div id="game">
 			<div id="tiles">
