--- a/app/source/scripts/playNew.html
+++ b/app/source/scripts/playNew.html
@@ -8,9 +8,9 @@
 		<link rel="stylesheet" href="../resources/themes/default.css">
 		<script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
 	</head>
-	<body style="font-family: Hasklig; height: 600px">
-		<span id="gui">
-			<div id="menu" class="navbar navbar-default" style="position: absolute; left:0px;">
+	<body style="font-family: Hasklig; height: 600px;">
+		<span id="gui" style="z-index: 1; pointer-events: none;">
+			<div id="menu" class="navbar navbar-default" style="position: absolute; left:0px; pointer-events: all;">
 				<div class="container-fluid" style="padding-left: 0px; padding-right: 0px;">
 					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 						<ul class="nav navbar-nav">
@@ -21,7 +21,7 @@
 					</div>
 				</div>
 			</div>
-			<div id="info" class="navbar navbar-default" style="position: absolute; right:0px; bottom: 0px;">
+			<div id="info" class="navbar navbar-default" style="position: absolute; right:0px; bottom: 0px; pointer-events: all;">
 				<div class="container-fluid" style="padding-left: 0px; padding-right: 0px;">
 					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
 						<ul class="nav navbar-nav">
