--- a/app/source/scripts/playNew.html
+++ b/app/source/scripts/playNew.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="../resources/themes/default.css">
 		<script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
 	</head>
-	<body style="font-family: Hasklig; height: 600px;">
+	<body style="font-family: Hasklig;">
 		<span id="gui" style="z-index: 1; pointer-events: none;">
 			<div id="menu" class="navbar navbar-default" style="position: absolute; left:0px; pointer-events: all;">
 				<div class="container-fluid" style="padding-left: 0px; padding-right: 0px;">
