--- a/app/source/scripts/testing.html
+++ b/app/source/scripts/testing.html
@@ -41,7 +41,7 @@
 							<li><a href="#" class="modal-button" data-toggle="modal" data-target="#helpModal">Help</a></li>
 							<li><a href="#" id="restart">Restart</a></li>
 							<li><a href="menu.html" id="exit">Exit</a></li>
-							<li><a href="playNew.html?leveldata=0">Play</a></li>
+							<li><a href="play.html?leveldata=0">Play</a></li>
 							<li><a id="menuArrow" style="padding-right: 8px;">»</a></li>
 						</ul>
 					</div>
