--- a/app/source/scripts/testing.html
+++ b/app/source/scripts/testing.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<title>Testing</title>
 		<link rel="stylesheet" href="css/bootstrap.css" title="dark">
-		<link rel="stylesheet" href="css/blockade.css">
+		<!--link rel="stylesheet" href="css/blockade.css"-->
 		<link rel="stylesheet" href="../resources/themes/default.css">
 		<script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
 		<style>
