--- a/app/source/scripts/play.html
+++ b/app/source/scripts/play.html
@@ -56,6 +56,9 @@
 					</div>
 					<div class="modal-body">
 						<p>Congratulations!</p>
+						<br>
+						<span>Moves: <span id="win-moves">...</span></span><br>
+						<span>Distance: <span id="win-distance">...</span></span>
 					</div>
 					<div class="modal-footer">
 						<button type="button" class="btn btn-default" id="levelSelect">Level Select</button>
