--- a/app/source/scripts/play.html
+++ b/app/source/scripts/play.html
@@ -57,8 +57,8 @@
 					<div class="modal-body">
 						<p>Congratulations!</p>
 						<br>
-						<span>Moves: <span id="win-moves">...</span></span><br>
-						<span>Distance: <span id="win-distance">...</span></span>
+						<span>Moves: <span id="win-moves">0</span></span><br>
+						<span>Distance: <span id="win-distance">0</span></span>
 					</div>
 					<div class="modal-footer">
 						<button type="button" class="btn btn-default" id="levelSelect">Level Select</button>
